Fix navigation bar collapse

--- a/public/2018/techsummit/style.css
+++ b/public/2018/techsummit/style.css
@@ -301,6 +301,11 @@ section h2 {
   content: "|";
 }
 
+.navbar-collapse {
+  display: flex !important;
+  flex-basis: auto !important;
+}
+
 @media (max-width: 576px) {
   section .container {
     padding: 50px 40px;
